--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://portal.colaboracionsimba.net/DOCTOSDMAQ/2021/06Jun/REQDC8140/vista/",
   "name": "cotizador-cdt",
   "version": "0.1.0",
   "private": true,
